--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   font_awesome_flutter: ^9.2.0
+  google_maps_flutter: ^2.1.1
 
 dev_dependencies:
   flutter_test:
