--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,11 @@ dependencies:
   flutter:
     sdk: flutter
 
+  #sqflite: ^2.0.0+4
+  sqflite: ^1.3.1
+  path: ^1.7.0
+  path_provider: ^2.0.7
+
   flutter_rating_bar:
 
   flutter_localizations:
